2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		default color/stroke/fill for box drawing is now 
		black/continues/unfilled.

	* src/de/intevation/printlayout/tools/BoxFactory.java:
		set "fill" property to "none" if no fill is given.
		set "pointer-events" to "all" to make it selectable
		even in unfilled state.

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		title of the plugin frame is now "Print/Layout"

	* src/de/intevation/printlayout/PrintLayoutPlugin.java:
		the plugin is now activated over OJ's "File" menu
		in german called "Datei" over entry "Print/Layout"

2007-01-18  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/Arrows.java:
		added. vector shapes for arrows needed in translation tool.

2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/LayoutFrame.java:
		rename tool buttons

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		add overlay to select tool

2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/Tool.java:
		added. interface to be implemented by all tools

	* src/de/intevation/printlayout/tools/BoxInteractor.java:
		implements Tool interface

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		added, simple picking tool

	* src/de/intevation/printlayout/LayoutFrame.java:
		uses new picking tool and new Tool infrastructure.
		
2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* README.txt:
		Add missing 'cvs login' in I/a

2007-01-17  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* README.txt:
		Add a paragraph how to build and install the plugin

	* bin/run.sh:
		remove a needless variable

2007-01-17  Ludwig Reiter  <ludwig.reiter@intevation.de>
	
	* LICENSE.txt:
	  added. The license is LGPL (>=v2.1).